--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>655</width>
-    <height>494</height>
+    <width>650</width>
+    <height>510</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,19 +18,25 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>0</width>
-    <height>0</height>
+    <width>650</width>
+    <height>510</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>650</width>
+    <height>510</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="contrastAdjust">
     <property name="geometry">
      <rect>
       <x>91</x>
-      <y>11</y>
+      <y>21</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -39,11 +45,11 @@
      <string>Contrast</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="brightnessAdjust">
     <property name="geometry">
      <rect>
       <x>91</x>
-      <y>41</y>
+      <y>51</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -52,11 +58,11 @@
      <string>Brightness</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="zoomIn">
     <property name="geometry">
      <rect>
       <x>91</x>
-      <y>231</y>
+      <y>241</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -65,11 +71,11 @@
      <string>Zoom In</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="getHistogram">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>380</y>
+      <y>390</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -78,11 +84,11 @@
      <string>Show</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_9">
+   <widget class="QPushButton" name="equalizeHistogram">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>410</y>
+      <y>420</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -91,11 +97,11 @@
      <string>Equalize</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_10">
+   <widget class="QPushButton" name="MatchHistogram">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>440</y>
+      <y>450</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -104,11 +110,11 @@
      <string>Match</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_11">
+   <widget class="QPushButton" name="zoomOut">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>260</y>
+      <y>270</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -117,11 +123,11 @@
      <string>Zoom Out</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_12">
+   <widget class="QPushButton" name="rotate90">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>300</y>
+      <y>310</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -130,11 +136,11 @@
      <string>Rotate 90°</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_13">
+   <widget class="QPushButton" name="applyFilter">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>340</y>
+      <y>350</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -147,7 +153,7 @@
     <property name="geometry">
      <rect>
       <x>18</x>
-      <y>410</y>
+      <y>420</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -171,7 +177,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>340</y>
+      <y>350</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -195,7 +201,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>300</y>
+      <y>310</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -219,7 +225,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>250</y>
+      <y>260</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -243,7 +249,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>120</y>
+      <y>110</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -267,7 +273,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>40</y>
+      <y>50</y>
       <width>301</width>
       <height>111</height>
      </rect>
@@ -277,7 +283,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>270</y>
+      <y>280</y>
       <width>251</width>
       <height>111</height>
      </rect>
@@ -287,7 +293,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>20</y>
+      <y>30</y>
       <width>49</width>
       <height>16</height>
      </rect>
@@ -305,7 +311,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>250</y>
+      <y>260</y>
       <width>49</width>
       <height>16</height>
      </rect>
@@ -323,7 +329,7 @@
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>160</y>
+      <y>170</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -336,7 +342,7 @@
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>340</y>
+      <y>350</y>
       <width>41</width>
       <height>71</height>
      </rect>
@@ -345,11 +351,11 @@
      <string>Add</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_8">
+   <widget class="QPushButton" name="resetImage">
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>160</y>
+      <y>170</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -358,11 +364,11 @@
      <string>Reset</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_14">
+   <widget class="QPushButton" name="deleteFilter">
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>270</y>
+      <y>280</y>
       <width>41</width>
       <height>61</height>
      </rect>
@@ -383,11 +389,11 @@
      <string>Delete</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_7">
+   <widget class="QLineEdit" name="matchHistogramFIeld">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>440</y>
+      <y>450</y>
       <width>41</width>
       <height>24</height>
      </rect>
@@ -397,7 +403,7 @@
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>390</y>
+      <y>400</y>
       <width>211</width>
       <height>21</height>
      </rect>
@@ -407,7 +413,7 @@
     <property name="geometry">
      <rect>
       <x>360</x>
-      <y>160</y>
+      <y>170</y>
       <width>171</width>
       <height>21</height>
      </rect>
@@ -417,7 +423,7 @@
     <property name="geometry">
      <rect>
       <x>318</x>
-      <y>160</y>
+      <y>170</y>
       <width>31</width>
       <height>20</height>
      </rect>
@@ -433,7 +439,7 @@
     <property name="geometry">
      <rect>
       <x>328</x>
-      <y>390</y>
+      <y>400</y>
       <width>31</width>
       <height>20</height>
      </rect>
@@ -445,11 +451,11 @@
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox">
+   <widget class="QSpinBox" name="rotate90Field">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>300</y>
+      <y>310</y>
       <width>51</width>
       <height>25</height>
      </rect>
@@ -461,11 +467,11 @@
      <number>0</number>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox_3">
+   <widget class="QSpinBox" name="brightnessField">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>40</y>
+      <y>50</y>
       <width>51</width>
       <height>25</height>
      </rect>
@@ -477,11 +483,11 @@
      <number>0</number>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox_4">
+   <widget class="QSpinBox" name="zoomInField">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>230</y>
+      <y>240</y>
       <width>51</width>
       <height>25</height>
      </rect>
@@ -493,11 +499,11 @@
      <number>0</number>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox_5">
+   <widget class="QSpinBox" name="zoomOutXFIeld">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>260</y>
+      <y>270</y>
       <width>51</width>
       <height>25</height>
      </rect>
@@ -512,11 +518,11 @@
      <number>0</number>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox_6">
+   <widget class="QSpinBox" name="zoomOutYFIeld">
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>260</y>
+      <y>270</y>
       <width>51</width>
       <height>25</height>
      </rect>
@@ -531,11 +537,11 @@
      <number>0</number>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
+   <widget class="QPushButton" name="getGrayscale">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>70</y>
+      <y>80</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -544,11 +550,11 @@
      <string>Grayscale</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_15">
+   <widget class="QPushButton" name="saveImage">
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>190</y>
+      <y>200</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -557,11 +563,11 @@
      <string>Save</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_7">
+   <widget class="QPushButton" name="getNegative">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>100</y>
+      <y>110</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -570,11 +576,11 @@
      <string>Negative</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_16">
+   <widget class="QPushButton" name="verticalMirror">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>130</y>
+      <y>140</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -583,11 +589,11 @@
      <string>V-mirror</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_17">
+   <widget class="QPushButton" name="HorizontalMirror">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>160</y>
+      <y>170</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -596,11 +602,11 @@
      <string>H-mirror</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_18">
+   <widget class="QPushButton" name="Quantize">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>190</y>
+      <y>200</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -609,11 +615,11 @@
      <string>Quantize</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="addImage_file_path_2">
+   <widget class="QLineEdit" name="outImageField">
     <property name="geometry">
      <rect>
       <x>360</x>
-      <y>190</y>
+      <y>200</y>
       <width>171</width>
       <height>21</height>
      </rect>
@@ -623,7 +629,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>190</y>
+      <y>200</y>
       <width>40</width>
       <height>20</height>
      </rect>
@@ -635,11 +641,11 @@
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox_7">
+   <widget class="QSpinBox" name="quantizationField">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>190</y>
+      <y>200</y>
       <width>51</width>
       <height>25</height>
      </rect>
@@ -654,11 +660,11 @@
      <number>1</number>
     </property>
    </widget>
-   <widget class="QDoubleSpinBox" name="doubleSpinBox">
+   <widget class="QDoubleSpinBox" name="contrastField">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>10</y>
+      <y>20</y>
       <width>51</width>
       <height>25</height>
      </rect>
@@ -667,11 +673,11 @@
      <double>0.010000000000000</double>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_19">
+   <widget class="QPushButton" name="deleteImage">
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>190</y>
+      <y>200</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -680,13 +686,29 @@
      <string>Delete</string>
     </property>
    </widget>
+   <widget class="QSpinBox" name="pre_clamp_offset">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>350</y>
+      <width>51</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>-99</number>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>655</width>
+     <width>650</width>
      <height>21</height>
     </rect>
    </property>
